--- a/lesson1/errors.html
+++ b/lesson1/errors.html
@@ -17,7 +17,7 @@
     let b = 500;
     let c = "hello";
     let d = "okten";
-    var x = 'constant value';
+    let x = 'constant value';
     {
         console.log(a);
         x = 'new value';
