--- a/lesson1/homework.html
+++ b/lesson1/homework.html
@@ -196,6 +196,15 @@
 
     // - Подумайте Какие значения выведет в окно браузера следующий фрагмент кода?  и почему?
 
+    let str = "20";
+    let a = 5;
+    document.write(str + a + "<br/>");
+    document.write(str - a + "<br/>");
+    document.write(str * "2" + "<br/>");
+    document.write(str / 2 + "<br/>");
+
+    // у випадку з "+" значення конкатенуються у всіх інших випадках виконуються математичні операції "-" "*" та "/"
+    // і відповідно у першому випадку отримуємо 205 у другому - 15, третьому - 40, четвертому - 10
 
 </script>
 
