--- a/lesson1/сlasswork.html
+++ b/lesson1/сlasswork.html
@@ -43,12 +43,12 @@
   let arrBook = [
       {
           name: 'Продавец обуви',
-          numberPage: '386',
+          numberPage: 386,
           genre: ' Біографія, Автобіографія, Мемуари'
       },
       {
           name: 'Життя і мета собаки',
-          numberPage: '169',
+          numberPage: 169,
           genre: 'Роман, Фікшн, Гумор',
           author: 'Брюс Кемерон'
       }
