--- a/lesson2/additional.html
+++ b/lesson2/additional.html
@@ -14,11 +14,11 @@
     // Інакше слід вивести на екран повідомлення про те, що це маленький масив, в якому менше 3-х елементів.
 
     // let friends = ["Ivan", "Slavik", "Grisha", "Lera", "Ira"];
-    // console.log(friends.length)
+    // console.log(friends.length);
     // if (friends.length >= 3) {
-    //     console.log('Це великий масив')
+    //     console.log('Це великий масив');
     // } else if (friends.length < 3) {
-    //     console.log('Це малий масив')
+    //     console.log('Це малий масив');
     // }
 
     // - Маємо 3 числа і між ним  нам потрібно знайти те що посередині.
@@ -28,12 +28,12 @@
     let b = +prompt('Введи число B');
     let c = +prompt('Введи число C');
     if (a > b && a < c) {
-        console.log('число A посередині')
+        console.log('число A посередині');
     } else if (a > b || a < c) {
         if (b < c) {
-            console.log('число В посередині')
+            console.log('число В посередині');
         } else {
-            console.log('число C посередині')
+            console.log('число C посередині');
         }
     }
 
@@ -46,15 +46,15 @@
     //     result = 'Багато';
     // }
 
-    // let result = a + b < 4? 'Мало' : 'Багато'
-    // console.log(result)
+    // let result = a + b < 4? 'Мало' : 'Багато';
+    // console.log(result);
 
     // - Маємо будь яке число від -100 , 0 , +100 потрібно перевірити яким є число: позитивним, негативним або нулем
     // напишіть це тернарним оператором
 
     // let number = 100;
     // let result = number >= -100 && number < 0? 'Число негативне' : number === 0 ? 'Число є нулем' : number > 0 && number <= 100? 'Число позитивне' : 'Некоректне число';
-    // console.log(result)
+    // console.log(result);
 
 
 </script>
