--- a/lesson2/homework.html
+++ b/lesson2/homework.html
@@ -14,56 +14,56 @@
 
     // let time = +prompt('Введи час від 0 до 59');
     // if (time > 0 && time <= 15) {
-    //   document.write('<h1>час в першій чверті</h1>')
+    //   document.write('<h1>час в першій чверті</h1>');
     // } else if (time > 15 && time <= 30) {
-    //     document.write('<h1>час в другій чверті</h1>')
+    //     document.write('<h1>час в другій чверті</h1>');
     // } else if (time > 30 && time <= 45) {
-    //     document.write('<h1>час в третій чверті</h1>')
+    //     document.write('<h1>час в третій чверті</h1>');
     // } else if (time > 45 && time <=59) {
-    //     document.write('<h1>час в четвертій чверті</h1>')
+    //     document.write('<h1>час в четвертій чверті</h1>');
     // } else {
-    //     document.write('<h1>Ви ввели некоректне значення</h1>')
+    //     document.write('<h1>Ви ввели некоректне значення</h1>');
     // }
 
     // - У змінній day дано якесь число від 1 до 31. Потрібно визначити, у яку половину(декаду) місяця потрапляє це число (у першу, другу чи третю).
 
     // let day = +prompt('Введи день місяця від 1 до 31');
     // if (day >= 1 && day <= 10) {
-    //     document.write('<h1>Твій день потрапляє в першу частину місяця</h1>')
+    //     document.write('<h1>Твій день потрапляє в першу частину місяця</h1>');
     // } else if (day >= 11 && day <= 20) {
-    //     document.write('<h1>Твій день потрапляє в другу частину місяця</h1>')
+    //     document.write('<h1>Твій день потрапляє в другу частину місяця</h1>');
     // } else if (day >= 21 && day <= 31) {
-    //     document.write('<h1>Твій день потрапляє в третю частину місяця</h1>')
+    //     document.write('<h1>Твій день потрапляє в третю частину місяця</h1>');
     // } else {
-    //     document.write('<h1>Ви ввели некоректне значення</h1>')
+    //     document.write('<h1>Ви ввели некоректне значення</h1>');
     // }
 
     // - У нас є змінна test, якщо  не дорівнює true, виведіть 'Вірно', інакше виведіть 'Неправильно'.
     // Перевірте роботу скрипта при test, що дорівнює true, false. Напишіть два варіанти скрипта - з коротким записом(тернаркою)
 
-    // let test = ' '
+    // let test = ' ';
     // if (!test) {
-    //     document.write('<h1>Вірно</h1>')
+    //     document.write('<h1>Вірно</h1>');
     // } else {
-    //     document.write('<h1>Неправильно</h1>')
+    //     document.write('<h1>Неправильно</h1>');
     // }
     //
-    // let test2 = ''
-    // let result = !test2? 'Вірно' : 'Неправильно'
-    // console.log(result)
+    // let test2 = '';
+    // let result = !test2? 'Вірно' : 'Неправильно';
+    // console.log(result);
 
     // - Якщо змінна a не дорівнює нулю, виведіть 'Вірно', інакше виведіть 'Невірно'. Перевірте  скрипт при a, що дорівнює 1, 0, -3
 
-    // let a = +prompt('Введи число 1, 0 або -3')
+    // let a = +prompt('Введи число 1, 0 або -3');
     // if (a !== 0) {
-    //     document.write('Вірно')
+    //     document.write('Вірно');
     // } else {
-    //     document.write('Невірно')
+    //     document.write('Невірно');
     // }
 
     // - Скласти розклад на тиждень за домопоги switch. Користувач вводить порядковий номер дня тижня і на екрані відображається інфа що заплановано на цей день.
 
-    // let day = +prompt('Введи порядковий номер дня тижня')
+    // let day = +prompt('Введи порядковий номер дня тижня');
     // switch (day) {
     //     case 1:
     //         document.write('<h1>Понеділок</h1> <br>' +
@@ -140,21 +140,21 @@
 
     // - Потрібно визначити Високосний рік чи ні. Високосні роки діляться націло на 4.
 
-    // let year = +prompt('Високосний рік чи ні? Введи свій рік:')
+    // let year = +prompt('Високосний рік чи ні? Введи свій рік:');
     // if (year % 4 === 0) {
-    //     document.write('<h1>Зараз високосний рік</h1>')
+    //     document.write('<h1>Зараз високосний рік</h1>');
     // } else {
-    //     document.write('<h1>Зараз не високосний рік</h1>')
+    //     document.write('<h1>Зараз не високосний рік</h1>');
     // }
 
     // - Використовуючи конструкцію if..else, напишіть код, який запитуватиме: „Яка «офіційна» назва JavaScript?“
     // Якщо користувач вводить «ECMAScript», то показати: «Правильно!», інакше – відобразити: «Не знаєте? ECMAScript!
 
-    let ask = prompt('Яка «офіційна» назва JavaScript?')
+    let ask = prompt('Яка «офіційна» назва JavaScript?');
     if (ask === 'ECMAScript') {
-        document.write('<h1>Правильно</h1>')
+        document.write('<h1>Правильно</h1>');
     } else {
-        document.write('<h1>Не знаєте? ECMAScript!</h1>')
+        document.write('<h1>Не знаєте? ECMAScript!</h1>');
     }
 
 
